[workspace]

members = [
  "core",
  "gen-cli",
  "gen-web",
  "into-base36-id",
  "seed-encoder",
  "seed-bundle-explorer",
  "is-valid"
]

resolver = "2"

[workspace.dependencies]
ed25519-dalek = "2.1.1"
anyhow = "1.0"
serde_json = "1.0.64"
tokio = "1.12.0"
structopt = "0.3.25"
serde = { version = "1.0.123", features = ["derive"] }
base64 = "0.13.0"
failure = "0.1.5"
