[package]
name = "hpos-config-core"
version = "0.0.0"
authors = ["perry.kundert@holo.host", "yegortimoshenko@transumption.com"]
edition = "2018"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
arrayref = "0.3.5"
base64 = "0.10.1"
ed25519-dalek = { version = "1.0.0-pre.1", features = ["nightly", "serde"] }
failure = "0.1.5"
hcid = "0.0.6"
lazy_static = "1.2"
rand = "0.6.5"
serde = { version = "1.0.89", features = ["derive"] }
url = "2.1.0"

[dependencies.argon2min]
git = "https://github.com/Holo-Host/argon2min"
branch = "2019-10-13-holo-config"

[features]
wasm-bindgen = ["rand/wasm-bindgen"]
