[package]
name = "hpos-config-core"
version = "0.1.1"
authors = [
  "Perry Kundert <perry@hardconsulting.com>",
  "Yegor Timoshenko <yegortimoshenko@transumption.com>",
  "zo-el <joelulahanna@gmail.com>"
]
edition = "2018"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
arrayref = "0.3.5"
base64 = "0.13.0"
blake2b_simd = {version = "0.5.10"}
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
failure = "0.1.5"
lazy_static = "1.2"
rand = "0.6.5"
serde = { version = "1.0.123", features = ["derive"] }
url = "2.1.0"
base36 = "=0.0.1"

[dependencies.argon2min]
git = "https://github.com/Holo-Host/argon2min"
rev = "28e765e4369e19bc0126bb46acaacadf1303de22"


[features]
wasm-bindgen = ["rand/wasm-bindgen"]
