[package]
name = "holo-config-derive"
version = "0.0.0"
authors = ["perry.kundert@holo.host", "yegortimoshenko@transumption.com"]
edition = "2018"
repository = "https://github.com/Holo-Host/holo-config"

[dependencies]
failure = "0.1.5"
holo-config-core = { path = "../core" }
serde_json = "1.0.39"

[dependencies.holochain_conductor_api]
git = "https://github.com/holochain/holochain-rust"
rev = "0d5f7634b9089477d50348855b1ffcf7f2f0dce5"

[dependencies.holochain_common]
git = "https://github.com/holochain/holochain-rust"
rev = "0d5f7634b9089477d50348855b1ffcf7f2f0dce5"

[dependencies.holochain_dpki]
git = "https://github.com/holochain/holochain-rust"
rev = "0d5f7634b9089477d50348855b1ffcf7f2f0dce5"
