[package]
name = "hpos-config-gen-cli"
version = "0.2.0"
authors = [
  "Yegor Timoshenko <yegortimoshenko@transumption.com>",
  "zo-el <joelulahanna@gmail.com>"
]
edition = "2021"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
docopt = "1.0.2"
failure = { workspace = true }
ed25519-dalek = { workspace = true, features = ["serde"] }
hpos-config-core = { path = "../core" }
rand = "0.8.5"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.8"
