[package]
name = "hpos-state-gen-web"
version = "0.0.0"
authors = ["perry.kundert@holo.host", "yegortimoshenko@transumption.com"]
edition = "2018"
repository = "https://github.com/Holo-Host/hpos-state"

[dependencies]
failure = "0.1.5"
hpos-state-core = { path = "../core", features = ["wasm-bindgen"] }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
wasm-bindgen-cli = "0.2.51"

[lib]
crate-type = ["cdylib", "rlib"]
