[package]
name = "hpos-config-gen-web"
version = "0.1.0"
authors = [
  "Lisa Jetton <ldjetton21@gmail.com>",
  "PJ Klimek <pj@imagine-nyc.com>",
  "Yegor Timoshenko <yegortimoshenko@transumption.com>",
  "zo-el <joelulahanna@gmail.com>"
]
edition = "2018"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
arrayref = "0.3.5"
base64 = "0.13.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
failure = "0.1.5"
hpos-config-core = { path = "../core", features = ["wasm-bindgen"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
wasm-bindgen-cli = "0.2.51"

[lib]
crate-type = ["cdylib", "rlib"]
