[package]
name = "holo-config-generate"
version = "0.0.0"
authors = ["perry.kundert@holo.host", "yegortimoshenko@transumption.com"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Holo-Host/holo-config"

[dependencies]
docopt = "1.0.2"
failure = "0.1.5"
holo-config-core = { path = "../core" }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
sha2 = "0.8.0"
