[package]
name = "hpos-config-into-base36-id"
version = "0.0.0"
authors = [
  "Yegor Timoshenko <yegortimoshenko@transumption.com>"
]
edition = "2018"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
ed25519-dalek = { version = "1.0.0-pre.1" }
failure = "0.1.5"
hpos-config-core = { path = "../core" }
serde_json = "1.0.64"
