[package]
name = "hpos-config-into-base36-id"
version = "0.2.1"
authors = [
  "Yegor Timoshenko <yegortimoshenko@transumption.com>",
  "Joel U <joelulahanna@gmail.com>"
]
edition = "2021"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
hpos-config-core = { path = "../core" }
hpos-config-seed-bundle-explorer = { path = "../seed-bundle-explorer" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
structopt = { workspace = true }
