[package]
name = "hpos-config-into-ed25519-keypair"
version = "0.1.0"
authors = [
  "Joel U <joelulahanna@gmail.com>"
]
edition = "2018"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
base64 = "0.10.1"
ed25519-dalek = { version = "1.0.0-pre.1" }
failure = "0.1.5"
hpos-config-core = { path = "../core" }
serde_json = "1.0.64"
