[package]
name = "hpos-config-into-keystore"
version = "0.0.0"
authors = [
  "Yegor Timoshenko <yegortimoshenko@transumption.com>"
]
edition = "2018"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
failure = "0.1.5"
hpos-config = { path = "../self" }
serde_json = "1.0.39"

[dependencies.holochain_conductor_lib]
git = "https://github.com/holochain/holochain-rust"
branch = "develop"

[dependencies.holochain_common]
git = "https://github.com/holochain/holochain-rust"
branch = "develop"

[dependencies.holochain_dpki]
git = "https://github.com/holochain/holochain-rust"
branch = "develop"
