[package]
name = "hpos-config-seed-bundle-explorer"
version = "0.1.0"
authors = [
  "Joel U <joelulahanna@gmail.com>"
]
edition = "2018"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
base64 = "0.13.0"
ed25519-dalek = { version = "1.0.0-pre.1" }
failure = "0.1.5"
hpos-config-core = { path = "../core" }
serde_json = "1.0.64"
# this patch is used because holo-nixpkgs is using an old version of holochain.
# once its bumped to holochain v0.0.115 then switched back
# hc_seed_bundle = "0.1.0"
# sodoken = "0.0.1-alpha.21"
hc_seed_bundle = {git = " https://github.com/holochain/lair", branch = "patch-15-11"}
sodoken = {git = " https://github.com/zo-el/sodoken", branch = "v0.0.1-alpha21"}
rmp-serde = "0.15.5"

[dev-dependencies]
tokio = { version = "1.12.0", features = [ "full" ] }
