[package]
name = "hpos-config-seed-bundle-explorer"
version = "0.1.1"
authors = [
  "Joel U <joelulahanna@gmail.com>"
]
edition = "2018"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
base64 = "0.13.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
hpos-config-core = { path = "../core" }
serde_json = "1.0.64"
hc_seed_bundle = "0.1.4"
sodoken = "0.0.6"
rmp-serde = "1.1.0"
thiserror = "1.0"
one_err = "0.0.7"

[dev-dependencies]
tokio = { version = "1.12.0", features = [ "full" ] }
