[package]
name = "hpos-config-seed-bundle-explorer"
version = "0.2.1"
authors = [
  "Joel U <joelulahanna@gmail.com>"
]
edition = "2021"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
base64 = { workspace = true }
ed25519-dalek = { workspace = true, features = ["serde"] }
hpos-config-core = { path = "../core" }
serde_json = { workspace = true }
hc_seed_bundle = "0.2.3"
sodoken = "0.0.11"
rmp-serde = "1.1.0"
thiserror = "1.0"
one_err = "0.0.8"
base36 = "0.0.1"

[dev-dependencies]
tokio = { workspace = true, features = [ "full" ] }
base64 = { workspace = true }
