[package]
name = "hpos-config-seed-encoder"
version = "0.1.0"
authors = [
  "Joel U <joelulahanna@gmail.com>"
]
edition = "2021"
repository = "https://github.com/Holo-Host/hpos-config"

[dependencies]
ed25519-dalek = { version = "1.0.0-pre.1" }
anyhow = "1.0"
hpos-config-core = { path = "../core" }
hpos-config-seed-bundle-explorer = { path = "../seed-bundle-explorer" }
serde_json = "1.0.64"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
structopt = "0.3.25"
