[package]
name = "holo-config-verify-node"
version = "0.0.0"
authors = ["perry.kundert@holo.host"]
edition = "2018"
repository = "https://github.com/Holo-Host/holo-config"

[dependencies]
failure = "0.1.5"
holo-config-core = { path = "../core", features = ["wasm-bindgen"] }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
wasm-bindgen = { version = "0.2.53", features = ["serde-serialize"] }
wasm-bindgen-cli = "0.2.53"

[lib]
crate-type = ["cdylib", "rlib"]
