[package]
name = "holo-config-verify-node"
version = "0.0.0"
authors = ["perry.kundert@holo.host"]
edition = "2018"
repository = "https://github.com/Holo-Host/holo-config"

[dependencies]
base64 = "0.10.1"
ed25519-dalek = { version = "1.0.0-pre.1", features = ["nightly", "serde"] }
failure = "0.1.5"
hcid = "0.0.6"
holo-config-core = { path = "../core", features = ["wasm-bindgen"] }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
wasm-bindgen = { version = "0.2.53", features = ["serde-serialize"] }
wasm-bindgen-cli = "0.2.53"
wee_alloc = "=0.4.4"

[lib]
crate-type = ["cdylib", "rlib"]
